--- a/sass/main-page/sections/_team.scss
+++ b/sass/main-page/sections/_team.scss
@@ -30,10 +30,37 @@
     @extend %title-styles;
     margin-bottom: 50px;
     font-family: Roboto;
+
+    @media screen and (min-width: 480px) {
+      margin-bottom: 30px;
+      font-size: 28px;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+      font-size: 28px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+      font-size: 36px;
+    }
   }
 
   &__list {
     @include flexbox($gap: 30px);
+
+    @media screen and (min-width: 480px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 768px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+    }
   }
 
   &__item {
@@ -56,6 +83,21 @@
 
   &__photo {
     margin-bottom: 30px;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+      height: 460px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+      height: 374px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+      height: 260px;
+    }
   }
 
   &__name {
@@ -84,7 +126,24 @@
     @include flexbox();
     column-gap: 10px;
     padding: 0px 32px;
-    padding-bottom: 30px;
+
+    @media screen and (min-width: 480px) {
+      padding-left: 122px;
+      padding-right: 122px;
+      padding-bottom: 24px;
+    }
+
+    @media screen and (min-width: 768px) {
+      padding-left: 74px;
+      padding-right: 74px;
+      padding-bottom: 24px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding-left: 32px;
+      padding-right: 32px;
+      padding-bottom: 30px;
+    }
   }
 
   &__contacts {
@@ -122,7 +181,3 @@
     }
   }
 }
-
-
-
-
