--- a/css/main.css
+++ b/css/main.css
@@ -771,11 +771,44 @@ body {
   margin-bottom: 50px;
   font-family: Roboto;
 }
+@media screen and (min-width: 480px) {
+  .team__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
+}
 .team__list {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   gap: 30px;
+}
+@media screen and (min-width: 480px) {
+  .team__list {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__list {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__list {
+    flex-wrap: nowrap;
+  }
 }
 .team__item {
   background-color: #ffffff;
@@ -791,6 +824,24 @@ body {
 }
 .team__photo {
   margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .team__photo {
+    width: 450px;
+    height: 460px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__photo {
+    width: 354px;
+    height: 374px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__photo {
+    width: 270px;
+    height: 260px;
+  }
 }
 .team__name {
   color: #212121;
@@ -820,7 +871,27 @@ body {
   -moz-column-gap: 10px;
        column-gap: 10px;
   padding: 0px 32px;
-  padding-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .team__icons {
+    padding-left: 122px;
+    padding-right: 122px;
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__icons {
+    padding-left: 74px;
+    padding-right: 74px;
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__icons {
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 30px;
+  }
 }
 .team__contacts {
   display: flex;
@@ -854,35 +925,93 @@ body {
   fill: #ffffff;
 }
 
-.customers {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 480px) {
+  .customers {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .customers {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .customers__title {
   color: #212121;
   text-align: center;
   font-family: Roboto;
-  font-size: 36px;
   font-style: normal;
-  margin-bottom: 50px;
+}
+@media screen and (min-width: 480px) {
+  .customers__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .customers__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers__title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 .customers__icons {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  gap: 0px;
-  -moz-column-gap: 30px;
-       column-gap: 30px;
+  gap: 30px;
+}
+@media screen and (min-width: 480px) {
+  .customers__icons {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 768px) {
+  .customers__icons {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers__icons {
+    flex-wrap: nowrap;
+  }
 }
 .customers__contacts {
-  width: 170px;
-  height: 92px;
-  flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #afb1b8;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: border, fill;
   transition-duration: 250ms;
+}
+@media screen and (min-width: 480px) {
+  .customers__contacts {
+    width: 210px;
+    height: 92px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .customers__contacts {
+    width: 226px;
+    height: 92px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers__contacts {
+    width: 170px;
+    height: 92px;
+  }
 }
 .customers__contacts:hover, .customers__contacts:focus {
   border: #2196f3 1px solid;
@@ -903,12 +1032,26 @@ body {
   width: 106px;
   height: 60px;
   flex-shrink: 0;
-  padding: 16px 32px;
   fill: #afb1b8;
   cursor: pointer;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: fill;
   transition-duration: 250ms;
+}
+@media screen and (min-width: 480px) {
+  .customers__icon {
+    padding: 16px 52px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .customers__icon {
+    padding: 16px 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers__icon {
+    padding: 16px 32px;
+  }
 }
 .customers__icon:hover {
   fill: #2196f3;
