--- a/sass/main-page/sections/_team.scss
+++ b/sass/main-page/sections/_team.scss
@@ -2,16 +2,8 @@
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: $background-color-ourteam;
-
-  @media screen and (min-width: 480px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-
-  @media screen and (min-width: 768px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
@@ -30,16 +22,8 @@
     @extend %title-styles;
     margin-bottom: 50px;
     font-family: Roboto;
-
-    @media screen and (min-width: 480px) {
-      margin-bottom: 30px;
-      font-size: 28px;
-    }
-
-    @media screen and (min-width: 768px) {
-      margin-bottom: 30px;
-      font-size: 28px;
-    }
+    margin-bottom: 30px;
+    font-size: 28px;
 
     @media screen and (min-width: 1200px) {
       margin-bottom: 50px;
@@ -49,14 +33,7 @@
 
   &__list {
     @include flexbox($gap: 30px);
-
-    @media screen and (min-width: 480px) {
-      flex-wrap: wrap;
-    }
-
-    @media screen and (min-width: 768px) {
-      flex-wrap: wrap;
-    }
+    flex-wrap: wrap;
 
     @media screen and (min-width: 1200px) {
       flex-wrap: nowrap;
@@ -67,6 +44,20 @@
     background-color: $accent-color;
     box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024,
       0px 1px 3px 0px #0000001f;
+      max-width: 450px;
+      width: 100%;
+
+      @media screen and (min-width: 480px) {
+        width: 450px;
+      }
+
+      @media screen and (min-width: 768px) {
+        width: 354px;
+      }
+
+      @media screen and (min-width: 1200px) {
+        width: 270px;
+      }
 
     &:first-child,
     &:nth-child(2) {
@@ -82,7 +73,10 @@
   }
 
   &__photo {
+    max-width: 450px;
     margin-bottom: 30px;
+    width: 100%;
+    height: 100%;
 
     @media screen and (min-width: 480px) {
       width: 450px;
@@ -125,13 +119,9 @@
   &__icons {
     @include flexbox();
     column-gap: 10px;
-    padding: 0px 32px;
-
-    @media screen and (min-width: 480px) {
-      padding-left: 122px;
-      padding-right: 122px;
-      padding-bottom: 24px;
-    }
+    padding-left: 122px;
+    padding-right: 122px;
+    padding-bottom: 24px;
 
     @media screen and (min-width: 768px) {
       padding-left: 74px;
