--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -22,6 +22,8 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
+    width: 100%;
+    max-width: 100%;
 }
 
 html {
