--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -13,13 +13,19 @@ body {
   font-family: Raleway, Roboto;
 }
 
+img {
+  width: 100%;
+  max-width: 100%;
+  display: block;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
   outline: solid red 2px;
 
   @media screen and (min-width: 320px) {
-    max-width: 320px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: 768px) {
