--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,6 +2,12 @@ body {
   font-family: Raleway, Roboto;
 }
 
+img {
+  width: 100%;
+  max-width: 100%;
+  display: block;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
@@ -9,7 +15,7 @@ body {
 }
 @media screen and (min-width: 320px) {
   .container {
-    max-width: 320px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -42,13 +48,6 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-  width: 100%;
-  max-width: 100%;
 }
 
 html {
@@ -155,7 +154,6 @@ input {
   }
 }
 .header {
-  width: 100%;
   background-color: #ffffff;
   animation-name: from-up;
   animation-duration: 1s;
@@ -165,8 +163,8 @@ input {
 }
 @media screen and (min-width: 768px) {
   .header {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -181,15 +179,27 @@ input {
   align-items: center;
   gap: 0px;
 }
+@media screen and (min-width: 768px) {
+  .header__nav {
+    display: inline;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+  }
+}
 .header__logo {
   display: block;
   text-decoration: none;
+  display: flex;
+  align-items: flex-start;
 }
 .header__logo:focus {
   display: block;
   text-decoration: none;
 }
 .header__logo1 {
+  display: block;
   color: #2196f3;
   font-family: Raleway;
   font-size: 24px;
@@ -212,11 +222,13 @@ input {
 @media screen and (min-width: 768px) {
   .header__logo2 {
     font-size: 24px;
+    display: inherit;
   }
 }
 @media screen and (min-width: 1200px) {
   .header__logo2 {
     font-size: 26px;
+    display: inherit;
   }
 }
 .header__list {
@@ -239,7 +251,7 @@ input {
     align-items: flex-start;
     gap: 50px;
     margin-right: 315px;
-    margin-left: auto;
+    margin-left: 93px;
   }
 }
 .header__item:hover .header__link::after {
@@ -288,17 +300,12 @@ input {
   transition-property: #2196f3;
 }
 .header__autorisations {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
+  display: none;
 }
 @media screen and (min-width: 768px) {
   .header__autorisations {
-    opacity: 1;
-    pointer-events: all;
-    visibility: visible;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-start;
     gap: 10px;
     flex-direction: column;
@@ -310,7 +317,7 @@ input {
     pointer-events: all;
     visibility: visible;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-start;
     gap: 30px;
     flex-direction: row;
@@ -352,6 +359,24 @@ input {
   transition-duration: 250ms;
   font-family: Roboto;
 }
+@media screen and (min-width: 768px) {
+  .header__contacts {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__contacts {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+}
 .header__contacts:hover {
   color: #2196f3;
   font-size: 14px;
@@ -367,9 +392,6 @@ input {
   letter-spacing: 0.02em;
 }
 .header__mail {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
   fill: #757575;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color, fill;
@@ -388,9 +410,6 @@ input {
   }
 }
 .header__phone {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
   fill: #757575;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color, fill;
@@ -415,15 +434,43 @@ input {
 }
 
 .hero {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .hero__list {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   gap: 8px;
+}
+@media screen and (min-width: 768px) {
+  .hero__list {
+    margin-bottom: 30px;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__list {
+    margin-bottom: 50px;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 }
 .hero__item {
   animation-duration: 1s;
@@ -457,11 +504,8 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0px;
+  gap: 30px;
   flex-wrap: wrap;
-  -moz-column-gap: 30px;
-       column-gap: 30px;
-  row-gap: 30px;
 }
 .hero__link {
   text-decoration: none;
@@ -489,9 +533,24 @@ input {
   animation-duration: 1s;
 }
 .hero__poster {
-  flex-basis: calc((100% - 60px) / 3);
   background-color: #ffffff;
   border: 1px solid #eeeeee;
+  max-width: 450px;
+  width: 100%;
+  max-height: 404px;
+}
+@media screen and (min-width: 768px) {
+  .hero__poster {
+    width: 354px;
+    height: 440px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__poster {
+    width: 370px;
+    height: 404px;
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
 .hero__poster:hover .hero__overlay, .hero__poster:focus .hero__overlay {
   width: 370px;
@@ -500,6 +559,27 @@ input {
   position: absolute;
   transform: scaleY(1);
   transform-origin: bottom;
+  max-width: 480px;
+  width: 100%;
+  max-height: 294px;
+}
+@media screen and (min-width: 480px) {
+  .hero__poster:hover .hero__overlay, .hero__poster:focus .hero__overlay {
+    width: 450px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__poster:hover .hero__overlay, .hero__poster:focus .hero__overlay {
+    width: 354px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__poster:hover .hero__overlay, .hero__poster:focus .hero__overlay {
+    width: 370px;
+    height: 294px;
+  }
 }
 .hero__poster:hover .hero__overlaytext, .hero__poster:focus .hero__overlaytext {
   color: #ffffff;
@@ -511,6 +591,24 @@ input {
   position: absolute;
   opacity: 1;
   font-family: Roboto;
+}
+@media screen and (min-width: 480px) {
+  .hero__poster:hover .hero__overlaytext, .hero__poster:focus .hero__overlaytext {
+    width: 402px;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__poster:hover .hero__overlaytext, .hero__poster:focus .hero__overlaytext {
+    width: 306px;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__poster:hover .hero__overlaytext, .hero__poster:focus .hero__overlaytext {
+    width: 322px;
+    font-size: 18px;
+  }
 }
 .hero__poster:hover, .hero__link:focus {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
@@ -545,6 +643,29 @@ input {
   padding-right: 24px;
   font-family: Roboto;
 }
+.hero__image {
+  max-width: 450px;
+  width: 100%;
+  max-height: 294px;
+}
+@media screen and (min-width: 480px) {
+  .hero__image {
+    width: 450px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__image {
+    width: 354px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__image {
+    width: 370px;
+    height: 294px;
+  }
+}
 .hero__work {
   color: #757575;
   font-size: 16px;
@@ -565,13 +686,30 @@ input {
   animation-duration: 1s;
 }
 .footer__container {
-  flex-direction: row;
-  align-content: normal;
-  row-gap: 20px;
-  display: flex;
-  justify-content: start;
-  align-items: flex-start;
-  gap: 0px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0px;
+    flex: 0 0 100%;
+    flex-wrap: wrap;
+  }
+}
+.footer__information {
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__information {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__information {
+    text-align: left;
+  }
 }
 .footer__logo {
   display: block;
@@ -585,25 +723,40 @@ input {
 }
 .footer__logo1 {
   color: #2196f3;
-  font-size: 26px;
+  font-size: 24px;
   font-family: Raleway;
   margin-bottom: 20px;
   word-wrap: break-word;
 }
+@media screen and (min-width: 1200px) {
+  .footer__logo1 {
+    font-size: 26px;
+  }
+}
 .footer__logo2 {
   color: #ffffff;
-  font-size: 26px;
+  font-size: 24px;
   font-family: Raleway;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer__logo2 {
+    font-size: 26px;
+  }
 }
 .footer__address {
   color: #ffffff;
   line-height: 1.71;
   word-wrap: break-word;
   font-style: normal;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
   display: block;
   font-family: Roboto;
+}
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    margin-bottom: 9px;
+  }
 }
 .footer__email {
   color: #757575;
@@ -622,7 +775,21 @@ input {
   font-family: Roboto;
 }
 .footer__icons {
-  margin-left: 70px;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer__icons {
+    padding-top: 5px;
+    margin-top: 0;
+    margin-left: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__icons {
+    margin-top: 0;
+    padding-top: 12px;
+    margin-left: 70px;
+  }
 }
 .footer__subtitle {
   color: #ffffff;
@@ -664,8 +831,19 @@ input {
 }
 
 .basement__form {
-  margin-left: 93px;
-  width: 570px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .basement__form {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .basement__form {
+    margin-left: 93px;
+    margin-top: 0;
+    padding-top: 10px;
+  }
 }
 .basement__title {
   color: #ffffff;
@@ -673,25 +851,52 @@ input {
   font-style: normal;
   text-transform: uppercase;
   margin-bottom: 20px;
+  margin-top: 60px;
   font-family: Roboto;
 }
+@media screen and (min-width: 1200px) {
+  .basement__title {
+    margin-bottom: 20px;
+    margin-top: 0;
+  }
+}
 .basement__container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 0px;
+  display: inline;
+}
+@media screen and (min-width: 1200px) {
+  .basement__container {
+    display: flex;
+  }
 }
 .basement__input {
-  width: 358px;
+  max-width: 450px;
+  width: 100%;
   height: 50px;
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-right: 12px;
+  margin-right: 15px;
+  margin-left: 15px;
   padding-left: 16px;
+  margin-bottom: 20px;
   color: #fff;
+}
+@media screen and (min-width: 480px) {
+  .basement__input {
+    width: 450px;
+    height: 50px;
+    flex-shrink: 1;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .basement__input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 16px;
+  }
 }
 .basement__input::-moz-placeholder {
   color: rgba(255, 255, 255, 0.6);
@@ -714,7 +919,6 @@ input {
 .basement__button {
   width: 200px;
   height: 50px;
-  flex-shrink: 0;
   border-radius: 4px;
   background-color: #2196f3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -727,6 +931,12 @@ input {
   justify-content: center;
   align-items: center;
   gap: 0px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 1200px) {
+  .basement__button {
+    margin: 0 auto;
+  }
 }
 .basement__icon {
   width: 24px;
