--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,10 +6,25 @@
   animation-duration: 1s;
 
   &__container {
-    flex-direction: row;
-    align-content: normal;
-    row-gap: 20px;
-    @include flexbox($position-x: start)
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+      @include flexbox();
+      flex: 0 0 100%;
+      flex-wrap: wrap;
+    }
+  }
+
+  &__information {
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+      text-align: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
   }
 
   &__logo {
@@ -26,19 +41,27 @@
 
   &__logo1 {
     color: $hover-color;
-    font-size: 26px;
+    font-size: 24px;
     font-family: Raleway;
     @extend %title-styles;
     margin-bottom: 20px;
     word-wrap: break-word;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 26px;
+    }
   }
 
   &__logo2 {
     color: $accent-color;
-    font-size: 26px;
+    font-size: 24px;
     font-family: Raleway;
     @extend %title-styles;
     margin-bottom: 20px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 26px;
+    }
   }
 
   &__address {
@@ -47,9 +70,13 @@
     line-height: 1.71;
     word-wrap: break-word;
     font-style: normal;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
     display: block;
     font-family: Roboto;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 9px;
+    }
   }
 
   &__email {
@@ -73,7 +100,19 @@
   }
 
   &__icons {
-    margin-left: 70px;
+    margin-top: 60px;
+
+    @media screen and (min-width: 768px) {
+      padding-top: 5px;
+      margin-top: 0;
+      margin-left: 165px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 0;
+      padding-top: 12px;
+      margin-left: 70px;
+    }
   }
 
   &__subtitle {
@@ -120,8 +159,17 @@
 
 .basement {
   &__form {
-    margin-left: 93px;
-    width: 570px;
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+      text-align: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-left: 93px;
+      margin-top: 0;
+      padding-top: 10px;
+    }
   }
 
   &__title {
@@ -131,24 +179,50 @@
     @extend %title-styles;
     text-transform: uppercase;
     margin-bottom: 20px;
+    margin-top: 60px;
     font-family: Roboto;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 20px;
+      margin-top: 0;
+    }
   }
 
   &__container {
-    @include flexbox()
+    display: inline;
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
   }
 
   &__input {
-    width: 358px;
+    max-width: 450px;
+    width: 100%;
     height: 50px;
     flex-shrink: 0;
     border-radius: 4px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background-color: rgba(33, 150, 243, 0);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-right: 12px;
+    margin-right: 15px;
+    margin-left: 15px;
     padding-left: 16px;
+    margin-bottom: 20px;
     color: #fff;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+      height: 50px;
+      flex-shrink: 1;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      height: 50px;
+      margin-right: 12px;
+      padding-left: 16px;
+    }
 
     &::placeholder {
       color: rgba(255, 255, 255, 0.6);
@@ -164,7 +238,6 @@
   &__button {
     width: 200px;
     height: 50px;
-    flex-shrink: 0;
     border-radius: 4px;
     background-color: #2196f3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -174,7 +247,12 @@
     line-height: 30px;
     letter-spacing: 0.96px;
     padding: 10px 28px 10px 28px;
-    @include flexbox($position-x: center, $center-y: center)
+    @include flexbox($position-x: center, $center-y: center);
+    margin: 0 auto;
+
+    @media screen and (min-width: 1200px) {
+      margin: 0 auto;
+    }
   }
 
   &__icon {
