--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  width: 100%;
   background-color: $accent-color;
   animation-name: from-up;
   animation-duration: 1s;
@@ -8,8 +7,8 @@
   padding-bottom: 16px;
 
   @media screen and (min-width: 768px) {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -21,9 +20,18 @@
     @include flexbox($center-y: center);
   }
 
+  &__nav {
+    @media screen and (min-width: 768px) {
+      display: inline;
+      @include flexbox($center-y: center);
+    }
+  }
+
   &__logo {
     display: block;
     text-decoration: none;
+    display: flex;
+    align-items: flex-start;
 
     &:focus {
       display: block;
@@ -32,6 +40,7 @@
   }
 
   &__logo1 {
+    display: block;
     color: $hover-color;
     font-family: Raleway;
     @extend %title-styles;
@@ -49,15 +58,18 @@
   &__logo2 {
     color: $logo-text-color;
     font-family: Raleway;
+    
     @extend %title-styles;
     font-size: 24px;
 
     @media screen and (min-width: 768px) {
       font-size: 24px;
+      display: inherit;
     }
 
     @media screen and (min-width: 1200px) {
       font-size: 26px;
+      display: inherit;
     }
   }
 
@@ -73,7 +85,7 @@
     @media screen and (min-width: 1200px) {
       @include flexbox($gap: 50px);
       margin-right: 315px;
-      margin-left: auto;
+      margin-left: 93px;
     }
   }
 
@@ -128,15 +140,10 @@
   }
 
   &__autorisations {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
+    display: none;
 
     @media screen and (min-width: 768px) {
-      opacity: 1;
-      pointer-events: all;
-      visibility: visible;
-      @include flexbox($gap: 10px);
+      @include flexbox($gap: 10px, $position-x: flex-end);
       flex-direction: column;
     }
 
@@ -144,7 +151,7 @@
       opacity: 1;
       pointer-events: all;
       visibility: visible;
-      @include flexbox($gap: 30px);
+      @include flexbox($gap: 30px, $position-x: flex-end);
       flex-direction: row;
     }
   }
@@ -182,6 +189,16 @@
     transition-duration: 250ms;
     font-family: Roboto;
 
+    @media screen and (min-width: 768px) {
+      font-size: 12px;
+      @include flexbox($center-y: center, $gap: 8px);
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      @include flexbox($center-y: center, $gap: 10px);
+    }
+
     &:hover {
       color: $hover-color;
       font-size: 14px;
@@ -200,9 +217,6 @@
   }
 
   &__mail {
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
     fill: $additional-text-color;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: color, fill;
@@ -220,9 +234,6 @@
   }
 
   &__phone {
-    width: 10px;
-    height: 16px;
-    margin-right: 10px;
     fill: $additional-text-color;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: color, fill;
