--- a/sass/main-page/sections/_info.scss
+++ b/sass/main-page/sections/_info.scss
@@ -2,129 +2,91 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  @media screen and (min-width: 768px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
 
-  &__container {
-    @include flexbox($center-y: center, $position-x: space-between);
-  }
-
   &__list {
-
-    @media screen and (min-width: 320px) {
-      
-    }
     @include flexbox($gap: 30px);
-    padding: 0px 15px 0px 15px;
     flex-wrap: wrap;
-
-    @media screen and (min-width: 768px) {
-      flex-wrap: wrap;
-    }
 
     @media screen and (min-width: 1200px) {
       flex-wrap: nowrap;
     }
   }
 
-  &__item {
-    &::before {
-      display: block;
-      border-radius: 4px;
-      background: $background-color-ourteam;
-      margin-bottom: 30px;
-      width: 100%;
-      height: 120px;
-      padding: 25px 190px 25px 190px;
-
-      @media screen and (min-width: 768px) {
-        max-width: 354px;
-        height: 120px;
-        padding: 25px 142px 25px 142px;
-      }
-
-      @media screen and (min-width: 1200px) {
-        max-width: 270px;
-        height: 120px;
-        padding: 25px 100px 25px 100px;
-      }
-    }
-
-    &:first-child::before {
-      content: url(../img/antenna.svg);
-      width: 70px;
-      height: 70px;
-    }
-
-    &:nth-child(2)::before {
-      content: url(../img/clock.svg);
-      width: 70px;
-      height: 70px;
-    }
-
-    &:nth-child(3)::before {
-      content: url(../img/diagram.svg);
-      width: 70px;
-      height: 70px;
-    }
-
-    &:last-child::before {
-      content: url(../img/astronaut.svg);
-      width: 70px;
-      height: 70px;
-    }
-
-    &:first-child,
-    &:nth-child(2) {
-      animation-name: from-left;
-      animation-duration: 1s;
-    }
-
-    &:last-child,
-    &:nth-child(3) {
-      animation-name: from-right;
-      animation-duration: 1s;
-    }
-  }
-
-  &__title {
-    color: $text-color;
-    font-family: Roboto;
-    font-size: 14px;
-    @extend %title-styles;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-    text-align: center;
+  &__item::before {
+    content: "";
+    background-position: center;
+    background-repeat: no-repeat;
+    display: block;
+    background-color: $background-color-ourteam;
+    width: 100%;
+    height: 120px;
 
     @media screen and (min-width: 768px) {
-      text-align: left;
+      width: 354px;
+      height: 120px;
     }
 
     @media screen and (min-width: 1200px) {
-      text-align: none;
+      width: 270px;
+      height: 120px;
+    }
+  }
+
+  &__item:nth-child(1)::before {
+    background-image: url("../../../img/antenna.svg");
+  }
+
+  &__item:nth-child(2)::before {
+    background-image: url("../../../img/clock.svg");
+  }
+
+  &__item:nth-child(3)::before {
+    background-image: url("../../../img/diagram.svg");
+  }
+
+  &__item:nth-child(4)::before {
+    background-image: url("../../../img/astronaut.svg");
+  }
+
+  &__item {
+    animation-name: features-item;
+    animation-duration: 1s;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  &__title {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: $text-color;
+    font-size: 14px;
+    @extend %title-styles;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: Roboto;
+
+    @media screen and (min-width: 768px) {
+      text-align: left;
     }
   }
 
   &__text {
     color: $additional-text-color;
+    font-size: 14px;
+    font-weight: 400;
     line-height: 1.7;
-    font-family: Roboto;
-    @extend %text-styles;
+    letter-spacing: 0.03em;
     max-width: 100%;
+    font-family: Roboto;
 
-    @media screen and (min-width: 768px)  {
-      max-width: 354px;
+    @media screen and (min-width: 768px) {
+      width: 354px;
     }
-
     @media screen and (min-width: 1200px) {
-      max-width: 270px;
+      width: 270px;
     }
   }
 }
